--- a/responsive-web-design/10-tribute-page-certification-project/index.html
+++ b/responsive-web-design/10-tribute-page-certification-project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Larry Itliong Time Line</title>
+    <title>Larry Itliong Timeline</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -15,37 +15,37 @@
             <figcaption id="img-caption">Modesto "Larry" Dulay Itliong, right, with Cesar Chavez, left, shortly after the Delano Grape Strike began.</figcaption>
         </figure>
         <div id="tribute-info">
-            <h2>Larry Itliong's life time line:</h2>
+            <h2>Larry Itliong's life timeline:</h2>
                 <ul>
                     <li>
-                        October 25, 1913: Larry Dulay Itliong is born in San Nicolas, Pangasinan, Philippines.
+                        <span id="dates">October 25, 1913</span>: Larry Dulay Itliong is born in San Nicolas, Pangasinan, Philippines.
                     </li>
                     <li>
-                        1929: At the age of 16, Itliong immigrates to the United States.
+                        <span id="dates">1929</span>: At the age of 16, Itliong immigrates to the United States.
                     </li>
                     <li>
-                        1930s-1940s: Itliong becomes involved in various labor activities, working in different industries such as agriculture, canneries, and as a seasonal farm laborer.
+                        <span id="dates">1930s-1940s</span>: Itliong becomes involved in various labor activities, working in different industries such as agriculture, canneries, and as a seasonal farm laborer.
                     </li>
                     <li>
-                        1950: Larry Itliong becomes a key figure in the labor movement when he helps organize a successful strike by Filipino farmworkers in asparagus fields in Stockton, California.
+                        <span id="dates">1950</span>: Larry Itliong becomes a key figure in the labor movement when he helps organize a successful strike by Filipino farmworkers in asparagus fields in Stockton, California.
                     </li>
                     <li>
-                        1956: Itliong helps establish the Filipino Farm Labor Union in California.
+                        <span id="dates">1956</span>: Itliong helps establish the Filipino Farm Labor Union in California.
                     </li>
                     <li>
-                        1965: Larry Itliong becomes the leader of the Agricultural Workers Organizing Committee (AWOC), a labor union primarily composed of Filipino farmworkers.
+                        <span id="dates">1965</span>: Larry Itliong becomes the leader of the Agricultural Workers Organizing Committee (AWOC), a labor union primarily composed of Filipino farmworkers.
                     </li>
                     <li>
-                        1965-1966: AWOC, under Itliong's leadership, leads the Delano Grape Strike, a significant farm labor strike involving Filipino and Mexican farmworkers.
+                        <span id="dates">1965-1966</span>: AWOC, under Itliong's leadership, leads the Delano Grape Strike, a significant farm labor strike involving Filipino and Mexican farmworkers.
                     </li>
                     <li>
-                        1966: The National Farm Workers Association (NFWA), led by Cesar Chavez, joins forces with AWOC to form the United Farm Workers (UFW). Larry Itliong plays a crucial role in the merger.
+                        <span id="dates">1966</span>: The National Farm Workers Association (NFWA), led by Cesar Chavez, joins forces with AWOC to form the United Farm Workers (UFW). Larry Itliong plays a crucial role in the merger.
                     </li>
                     <li>
-                        1971: Itliong resigns from the UFW due to disagreements with Chavez over the direction and leadership of the organization.
+                        <span id="dates">1971</span>: Itliong resigns from the UFW due to disagreements with Chavez over the direction and leadership of the organization.
                     </li>
                     <li>
-                        February 8, 1977: Larry Itliong passes away in Delano, California, at the age of 63.
+                        <span id="dates">February 8, 1977</span>: Larry Itliong passes away in Delano, California, at the age of 63.
                     </li>
                 </ul>
                 <h3>If you have time, you can read more about them on their <a href="https://en.wikipedia.org/wiki/Larry_Itliong" target="_blank">Wikipedia entry</a>.</h3>
