--- a/responsive-web-design/10-tribute-page-certification-project/index.html
+++ b/responsive-web-design/10-tribute-page-certification-project/index.html
@@ -15,7 +15,7 @@
             <figcaption id="img-caption">Modesto "Larry" Dulay Itliong, right, with Cesar Chavez, left, shortly after the Delano Grape Strike began.</figcaption>
         </figure>
         <div id="tribute-info">
-            <h2>Larry Itliong's life timeline:</h2>
+            <h2 id="headline">Larry Itliong's life timeline:</h2>
                 <ul>
                     <li>
                         <span id="dates">October 25, 1913</span>: Larry Dulay Itliong is born in San Nicolas, Pangasinan, Philippines.
@@ -48,7 +48,11 @@
                         <span id="dates">February 8, 1977</span>: Larry Itliong passes away in Delano, California, at the age of 63.
                     </li>
                 </ul>
-                <h3>If you have time, you can read more about them on their <a href="https://en.wikipedia.org/wiki/Larry_Itliong" target="_blank">Wikipedia entry</a>.</h3>
+                <blockquote cite="https://www.nokidhungry.org/blog/dyk-larry-itliong-defending-rights-farm-workers#:~:text=%E2%80%9CThe%20Constitution%20said%20that%20everybody,fight%20for%20justice%20for%20everybody.">
+                    <p>"The Constitution said that everybody has equal rights and justice. You have to make that come about. They are not going to give it to you."</p>
+                    <cite>-- Larry Itliong</cite>
+                </blockquote>
+                <h3>If you have time, you can read more about them on their <a id="tribute-link" href="https://en.wikipedia.org/wiki/Larry_Itliong" target="_blank">Wikipedia entry</a>.</h3>
         </div>
     </main>
 </body>
